--- a/style.css
+++ b/style.css
@@ -694,10 +694,6 @@ h3.my-profession {
   .section {
     left: 0;
   }
-  .about .about-content .personal-info .info-item p span {
-    display: block;
-    margin-left: 0;
-  }
 }
 @media (max-width: 991px) {
   .contact .contact-info-item,
@@ -739,10 +735,17 @@ h3.my-profession {
     z-index: 10000;
   }
   .portfolio .portfolio-item {
-    flex: 0 0 100%;
-    max-width: 100%;
+    flex: 0 0 115%;
+    max-width: 115%;
   }
   .portfolio .portfolio-item-inner .portfolio-img img {
     height: 230px;
+  }
+}
+/* .about .about-content .personal-info .info-item */
+@media (max-width: 450px) {
+  .about .about-content .personal-info .info-item {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 }
