--- a/style.css
+++ b/style.css
@@ -11,6 +11,44 @@ body {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
 }
+.watsapp {
+  position: fixed;
+  bottom: 30px;
+  right: 50px;
+  display: inline-block;
+  border: 3px solid white;
+  border-radius: 50%;
+}
+.watsapp::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  border: 3px solid white;
+  animation: watsap 1s ease infinite;
+}
+.watsapp img {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  display: block;
+}
+.watsapp img::after {
+  content: "red";
+  position: absolute;
+}
+
+@keyframes watsap {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.6);
+  }
+}
 .hidden {
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -144,6 +182,17 @@ li {
 }
 .shadow-dark {
   box-shadow: 0 0 20px rgb(48, 46, 77, 0.5);
+}
+.langwitch {
+  position: absolute;
+  top: 40px;
+  left: 150px;
+  padding: 10px 20px;
+  outline: none;
+  font-size: 15px;
+  border-radius: 10px;
+  border: 1px solid white;
+  background-color: var(bg-black-900);
 }
 /* aside */
 .aside {
@@ -747,5 +796,11 @@ h3.my-profession {
   .about .about-content .personal-info .info-item {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+}
+@media (max-width: 5000px) {
+  .watsapp {
+    bottom: 15px;
+    right: 25px;
   }
 }
