--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
 }
 .watsapp {
   position: fixed;
-  bottom: 30px;
-  right: 50px;
+  inset-block-end: 30px;
+  inset-inline-end: 50px;
   display: inline-block;
   border: 3px solid white;
   border-radius: 50%;
@@ -66,6 +66,7 @@ li {
   --bg-black-900: #f2f2fc;
   --bg-black-100: #fdf9ff;
   --bg-black-50: #e8dfec;
+  --bg-black-1000: #c5c5c5c5;
   --text-black-900: #302e4d;
   --text-black-700: #504e70;
 }
@@ -73,6 +74,7 @@ li {
   --bg-black-900: #151515;
   --bg-black-100: #222222;
   --bg-black-50: #393939;
+  --bg-black-1000: #161616;
   --text-black-900: #ffffff;
   --text-black-700: #e9e9e9;
 }
@@ -87,10 +89,10 @@ li {
   opacity: 1;
   padding: 0 30px;
   position: fixed;
-  left: 270px;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  inset-inline-start: 270px;
+  inset-block-start: 0;
+  inset-inline-end: 0;
+  inset-block-end: 0;
   z-index: 0;
   overflow-y: auto;
   overflow-x: hidden;
@@ -116,8 +118,14 @@ li {
   }
 }
 .padd-15 {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-inline-start: 15px;
+  padding-inline-end: 15px;
+}
+.diiii {
+  position: absolute;
+  inset-inline-end: 0;
+  inset-inline-start: 0;
+  padding-block-start: 120px;
 }
 .container {
   max-width: 1100px;
@@ -125,13 +133,13 @@ li {
   margin: auto;
 }
 .section .container {
-  padding-top: 60px;
-  padding-bottom: 70px;
+  padding-block-start: 60px;
+  padding-block-end: 70px;
 }
 .section-title {
   flex: 0 0 100%;
   max-width: 100%;
-  margin-bottom: 60px;
+  margin-block-end: 60px;
 }
 .section-title h2 {
   font-size: 40px;
@@ -145,8 +153,8 @@ li {
   width: 50px;
   background-color: var(--skin-color);
   position: absolute;
-  top: 100%;
-  left: 0;
+  inset-block-start: 100%;
+  inset-inline-start: 0;
 }
 .section-title h2::after {
   content: "";
@@ -154,15 +162,15 @@ li {
   width: 25px;
   background-color: var(--skin-color);
   position: absolute;
-  top: 100%;
-  left: 0;
-  margin-top: 8px;
+  inset-block-start: 100%;
+  inset-inline-start: 0;
+  margin-block-start: 8px;
 }
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-inline-start: -15px;
+  margin-inline-end: -15px;
   position: relative;
 }
 .btn {
@@ -183,36 +191,39 @@ li {
 .shadow-dark {
   box-shadow: 0 0 20px rgb(48, 46, 77, 0.5);
 }
-.langwitch {
+
+.lang {
   position: absolute;
-  top: 40px;
-  left: 150px;
-  padding: 10px 20px;
-  outline: none;
-  font-size: 15px;
-  border-radius: 10px;
-  border: 1px solid white;
-  background-color: var(bg-black-900);
+  bottom: 80px;
+  background-color: var(--bg-black-1000) !important;
+  color: var(--text-black-900) !important;
+  cursor: pointer;
 }
+/* ///////////////////////////////// */
+.lang option {
+  font-size: 15px;
+  padding-right: 10px;
+}
+
 /* aside */
 .aside {
   width: 270px;
   background: var(--bg-black-100);
   position: fixed;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   height: 100%;
   z-index: 10;
   padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid var(--bg-black-50);
+  border-inline-end: 1px solid var(--bg-black-50);
   transition: all 0.3s ease;
 }
 .aside .logo {
   position: absolute;
-  top: 50px;
+  inset-block-start: 50px;
   font-size: 30px;
   text-transform: capitalize;
 }
@@ -221,7 +232,6 @@ li {
   font-weight: 700;
   padding: 15px 20px;
   font-size: 30px;
-  letter-spacing: 5px;
   position: relative;
 }
 .aside .logo a span {
@@ -233,20 +243,20 @@ li {
   position: absolute;
   width: 20px;
   height: 20px;
-  border-bottom: 5px solid var(--skin-color);
-  border-left: 5px solid var(--skin-color);
-  bottom: 0;
-  left: 0;
+  border-block-end: 5px solid var(--skin-color);
+  border-inline-start: 5px solid var(--skin-color);
+  inset-block-end: 0;
+  inset-inline-start: 0;
 }
 .aside .logo a::after {
   content: "";
   position: absolute;
   width: 20px;
   height: 20px;
-  border-top: 5px solid var(--skin-color);
-  border-right: 5px solid var(--skin-color);
-  top: 0;
-  right: 0;
+  border-block-start: 5px solid var(--skin-color);
+  border-inline-end: 5px solid var(--skin-color);
+  inset-block-start: 0;
+  inset-inline-end: 0;
 }
 .aside .nav-toggler {
   height: 40px;
@@ -254,8 +264,8 @@ li {
   border: 1px solid var(--bg-black-50);
   cursor: pointer;
   position: fixed;
-  left: 300px;
-  top: 20px;
+  inset-inline-start: 300px;
+  inset-block-start: 20px;
   border-radius: 5px;
   background: var(--bg-black-100);
   display: none;
@@ -279,12 +289,12 @@ li {
   width: 18px;
   background: var(--skin-color);
   position: absolute;
-  top: -6px;
-  left: 0;
+  inset-block-start: -6px;
+  inset-inline-start: 0;
 }
 .aside .nav-toggler.open span::before {
   transform: rotate(45deg);
-  top: 0;
+  inset-block-start: 0;
 }
 .aside .nav-toggler span::after {
   content: "";
@@ -292,18 +302,18 @@ li {
   width: 18px;
   background: var(--skin-color);
   position: absolute;
-  top: 6px;
-  left: 0;
+  inset-block-start: 6px;
+  inset-inline-start: 0;
 }
 .aside .nav-toggler.open span::after {
   transform: rotate(-45deg);
-  top: 0;
+  inset-block-start: 0;
 }
 .aside .nav {
-  margin-top: 50px;
+  margin-block-start: 50px;
 }
 .aside .nav li {
-  margin-bottom: 20px;
+  margin-block-end: 20px;
 
   display: block;
 }
@@ -313,13 +323,13 @@ li {
   display: block;
   color: var(--text-black-900);
   padding: 5px 15px;
-  border-bottom: 1px solid var(--bg-black-50);
+  border-block-end: 1px solid var(--bg-black-50);
 }
 .aside .nav li a.active {
   color: var(--skin-color);
 }
 .aside .nav li a i {
-  margin-right: 15px;
+  margin-inline-end: 15px;
 }
 /* home */
 .home {
@@ -351,7 +361,7 @@ h3.my-profession {
   color: var(--skin-color);
 }
 .home-info p {
-  margin-bottom: 70px;
+  margin-block-end: 70px;
   font-size: 20px;
   color: var(--text-black-700);
 }
@@ -367,20 +377,20 @@ h3.my-profession {
   position: absolute;
   height: 80px;
   width: 80px;
-  right: 20px;
-  bottom: -40px;
-  border-bottom: 10px solid var(--skin-color);
-  border-right: 10px solid var(--skin-color);
+  inset-inline-end: 20px;
+  inset-block-end: -40px;
+  border-block-end: 10px solid var(--skin-color);
+  border-inline-end: 10px solid var(--skin-color);
 }
 .home-img::before {
   content: "";
   position: absolute;
   height: 80px;
   width: 80px;
-  left: 20px;
-  top: -40px;
-  border-top: 10px solid var(--skin-color);
-  border-left: 10px solid var(--skin-color);
+  inset-inline-start: 20px;
+  inset-block-start: -40px;
+  border-block-start: 10px solid var(--skin-color);
+  border-inline-start: 10px solid var(--skin-color);
 }
 .home .home-img img {
   margin: auto;
@@ -398,11 +408,11 @@ h3.my-profession {
 }
 .about .about-content .about-text h3 {
   font-size: 24px;
-  margin-bottom: 15px;
+  margin-block-end: 15px;
   font-weight: 700;
   color: var(--text-black-900);
 }
-.about .about-content .about-text h3 span {
+.about .about-content .about-text h3 .jop {
   color: var(--skin-color);
 }
 .about .about-content .about-text p {
@@ -414,7 +424,7 @@ h3.my-profession {
   flex: 0 0 60%;
   max-width: 60%;
 
-  margin-top: 40px;
+  margin-block-start: 40px;
 }
 .about .about-content .personal-info .info-item {
   flex: 0 0 50%;
@@ -425,25 +435,25 @@ h3.my-profession {
   padding: 10px 0;
   font-size: 16px;
   color: var(--text-black-900);
-  border-bottom: 1px solid var(--bg-black-50);
+  border-block-end: 1px solid var(--bg-black-50);
 }
 .about .about-content .personal-info .info-item p span {
   font-weight: 400;
   color: var(--text-black-700);
-  margin-left: 4px;
+  margin-inline-start: 4px;
   display: inline-block;
 }
 .about .about-content .personal-info .buttons {
-  margin-top: 30px;
+  margin-block-start: 30px;
 }
 .about .about-content .personal-info .buttons .btn {
-  margin-right: 15px;
-  margin-top: 10px;
+  margin-inline-end: 15px;
+  margin-block-start: 10px;
 }
 .about .about-content .skills {
   flex: 0 0 40%;
   max-width: 40%;
-  margin-top: 40px;
+  margin-block-start: 40px;
 }
 .about .about-content .skills .skill-item {
   flex: 0 0 100%;
@@ -464,21 +474,21 @@ h3.my-profession {
   position: relative;
 }
 .about .about-content .skills .skill-item {
-  margin-bottom: 25px;
+  margin-block-end: 25px;
 }
 .about .about-content .skills .skill-item .progress .progress-in {
   position: absolute;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   height: 100%;
   border-radius: 4px;
   background-color: var(--skin-color);
 }
 .about .about-content .skills .skill-item .skill-percent {
   position: absolute;
-  right: 0;
+  inset-inline-end: 0;
   color: var(--text-black-900);
-  top: -40px;
+  inset-block-start: -40px;
   font-weight: 400;
   line-height: 40px;
 }
@@ -486,11 +496,11 @@ h3.my-profession {
 .about .about-content .experience {
   flex: 0 0 50%;
   max-width: 50%;
-  margin-top: 30px;
+  margin-block-start: 30px;
 }
 .about .about-content h3.title {
   font-size: 24px;
-  margin-bottom: 30px;
+  margin-block-end: 30px;
   font-weight: 700;
   color: var(--text-black-900);
 }
@@ -508,25 +518,25 @@ h3.my-profession {
 }
 .about .about-content .timline .timline-item {
   position: relative;
-  padding-left: 37px;
-  padding-bottom: 50px;
+  padding-inline-start: 37px;
+  padding-block-end: 50px;
 }
 .about .about-content .timline .timline-item:last-child {
-  padding-bottom: 0;
+  padding-block-end: 0;
 }
 .about .about-content .timline .timline-item::before {
   content: "";
   width: 1px;
   position: absolute;
   height: 100%;
-  left: 7px;
-  top: 0;
+  inset-inline-start: 7px;
+  inset-block-start: 0;
   background-color: var(--skin-color);
 }
 .about .about-content .timline .circle-dot {
   position: absolute;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -535,16 +545,16 @@ h3.my-profession {
 .about .about-content .timline .timline-data {
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: 12px;
+  margin-block-end: 12px;
   color: var(--text-black-700);
 }
 .about .about-content .timline .timline-data .fa {
-  margin-right: 5px;
+  margin-inline-start: 5px;
 }
 .about .about-content .timline .timline-title {
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 15px;
+  margin-block-end: 15px;
   text-transform: capitalize;
   color: var(--text-black-900);
 }
@@ -556,10 +566,10 @@ h3.my-profession {
 }
 /* services */
 .services .container {
-  padding-bottom: 40px;
+  padding-block-end: 40px;
 }
 .services .services-item {
-  margin-bottom: 30px;
+  margin-block-end: 30px;
   flex: 0 0 33.33%;
   max-width: 33.33%;
 }
@@ -599,7 +609,7 @@ h3.my-profession {
 }
 .services .services-item .services-item-inner h4 {
   font-size: 18px;
-  margin-bottom: 15px;
+  margin-block-end: 15px;
   color: var(--text-black-900);
   font-weight: 700;
   text-transform: capitalize;
@@ -611,12 +621,12 @@ h3.my-profession {
 }
 /* portfolio */
 .portfolio .container {
-  padding-bottom: 40px;
+  padding-block-end: 40px;
 }
 .portfolio .portfolio-heading {
   flex: 0 0 100%;
   max-width: 100%;
-  margin-bottom: 40px;
+  margin-block-end: 40px;
 }
 .container .row:nth-child(3) {
   display: flex;
@@ -630,7 +640,7 @@ h3.my-profession {
 .portfolio .portfolio-item {
   flex: 0 0 49.33%;
   max-width: 49.33%;
-  margin-bottom: 30px;
+  margin-block-end: 30px;
   height: 300px;
 }
 .portfolio .portfolio-item-inner {
@@ -654,19 +664,19 @@ h3.my-profession {
   color: var(--skin-color);
   text-align: center;
   font-size: 25px;
-  margin-bottom: 20px;
+  margin-block-end: 20px;
 }
 .contact-sup-title {
   color: var(--text-black-900);
   text-align: center;
   font-size: 25px;
-  margin-bottom: 60px;
+  margin-block-end: 60px;
 }
 .contact .contact-info-item {
   flex: 0 0 25%;
   max-width: 25%;
   text-align: center;
-  margin-bottom: 60px;
+  margin-block-end: 60px;
 }
 .contact .contact-info-item .icon {
   display: inline-block;
@@ -701,7 +711,7 @@ h3.my-profession {
   max-width: 100%;
 }
 .contact .contact-form .form-item {
-  margin-bottom: 30px;
+  margin-block-end: 30px;
 }
 .contact .contact-form .form-item .form-control {
   width: 100%;
@@ -726,26 +736,26 @@ h3.my-profession {
 }
 @media (max-width: 1199px) {
   .section .container {
-    padding-top: 70px;
+    padding-block-start: 70px;
   }
   .aside {
-    left: -270px;
+    inset-inline-start: -270px;
   }
   .aside.open {
-    left: 0;
+    inset-inline-start: 0;
   }
   .aside .nav-toggler {
     display: flex;
-    left: 30px;
+    inset-inline-start: 30px;
   }
   .aside .nav-toggler.open {
-    left: 300px;
+    inset-inline-start: 300px;
   }
   .section.open {
-    left: 270px;
+    inset-inline-start: 270px;
   }
   .section {
-    left: 0;
+    inset-inline-start: 0;
   }
 }
 @media (max-width: 991px) {
@@ -804,7 +814,7 @@ h3.my-profession {
 }
 @media (max-width: 5000px) {
   .watsapp {
-    bottom: 15px;
-    right: 25px;
+    inset-block-end: 15px;
+    inset-inline-end: 25px;
   }
 }
